[package]
name = "cactpot"
version = "0.1.0"
authors = ["Lyn Levenick <346549+lynlevenick@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collect_slice = "1.2"
eyre = "0.6.1"
itertools = "0.9.0"
rustyline = "6.3.0"
termcolor = "1.1"

[profile.release]
codegen-units = 1
lto = true
